# jackbot

./: Cargo.toml  Dockerfile  LICENSE
src/: cli.rs  context.rs  discord.rs  env.rs  main.rs  openai.rs  stdio.rs
