[package]
name = "jackbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api = "0.1.4"
tokio = { version = "1.15", features = ["full"]}
chrono = "0.4"
derive_builder = "0.10"
clap = "3.0"
serenity = "0.10"
reqwest = "0.11"